force-app/main/default/objects/CommercialPlanFollowup__c/fields/BudgetType__c.field-meta.xml
<CustomField>
    <fullName>BudgetType__c</fullName>
    <label>Funding type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FG</fullName>
            </value>
            <value>
                <fullName>NIP</fullName>
            </value>
            <value>
                <fullName>SellInDiscount (TMP)</fullName>
            </value>
            <value>
                <fullName>CTN gratuits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>