force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewDate_0__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewDate_0__c</fullName>
    <label>Business Review Date 0</label>
    <type>DateTime</type>
</CustomField>