force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewDate_1__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewDate_1__c</fullName>
    <label>Business Review Date 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>