force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewDate_2__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewDate_2__c</fullName>
    <label>Business Review Date 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>