force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewQuantity_2__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewQuantity_2__c</fullName>
    <label>Business Review Quantity 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>