force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewValue_0__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewValue_0__c</fullName>
    <label>Business Review Value 0</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>