force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewValue_1__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewValue_1__c</fullName>
    <label>Business Review Value 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>