force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewValue_2__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewValue_2__c</fullName>
    <label>Business Review Value 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>