force-app/main/default/objects/CommercialPlanFollowup__c/fields/BusinessReviewVolume_1__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewVolume_1__c</fullName>
    <label>Business Review Volume 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>