force-app/main/default/objects/CommercialPlanFollowup__c/fields/CommercialPlan__c.field-meta.xml
<CustomField>
    <fullName>CommercialPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Commercial plan reference for the budget followup line</description>
    <label>Marketing Event</label>
    <referenceTo>CommercialPlan__c</referenceTo>
    <relationshipLabel>Commercial Plan Followups</relationshipLabel>
    <relationshipName>CommercialPlanFollowupsCP</relationshipName>
    <type>Lookup</type>
</CustomField>