force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityAllocate__c.field-meta.xml
<CustomField>
    <fullName>QuantityAllocate__c</fullName>
    <label>Quantity Allocate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>