force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityBudget__c.field-meta.xml
<CustomField>
    <fullName>QuantityBudget__c</fullName>
    <label>Quantity Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>