force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityFact__c.field-meta.xml
<CustomField>
    <fullName>QuantityFact__c</fullName>
    <label>Quantity Fact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>