force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityFreeze__c.field-meta.xml
<CustomField>
    <fullName>QuantityFreeze__c</fullName>
    <label>Quantity Freeze</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>