force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityGap__c.field-meta.xml
<CustomField>
    <fullName>QuantityGap__c</fullName>
    <description>The difference between the Quantity Budget and the Quantity Allocate (or next values in the process)</description>
    <label>Quantity Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>