force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityInvoice__c.field-meta.xml
<CustomField>
    <fullName>QuantityInvoice__c</fullName>
    <label>Quantity Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>