force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityLanded__c.field-meta.xml
<CustomField>
    <fullName>QuantityLanded__c</fullName>
    <label>Quantity Landed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>