force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityPreOrder__c.field-meta.xml
<CustomField>
    <fullName>QuantityPreOrder__c</fullName>
    <label>Quantity PreOrder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>