force-app/main/default/objects/CommercialPlanFollowup__c/fields/QuantityTarget__c.field-meta.xml
<CustomField>
    <fullName>QuantityTarget__c</fullName>
    <label>Quantity Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>