force-app/main/default/objects/CommercialPlanFollowup__c/fields/ValueAllocate__c.field-meta.xml
<CustomField>
    <fullName>ValueAllocate__c</fullName>
    <description>Aggregate condition from CPD</description>
    <label>Value Allocate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>