force-app/main/default/objects/CommercialPlanFollowup__c/fields/ValueBudget__c.field-meta.xml
<CustomField>
    <fullName>ValueBudget__c</fullName>
    <label>Value Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>