force-app/main/default/objects/CommercialPlanFollowup__c/fields/ValueInvoice__c.field-meta.xml
<CustomField>
    <fullName>ValueInvoice__c</fullName>
    <description>Aggregate condition from CPD</description>
    <label>Value Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>