force-app/main/default/objects/CommercialPlanFollowup__c/fields/ValueLanded__c.field-meta.xml
<CustomField>
    <fullName>ValueLanded__c</fullName>
    <label>Value Landed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>