force-app/main/default/objects/CommercialPlanFollowup__c/fields/ValueTarget__c.field-meta.xml
<CustomField>
    <fullName>ValueTarget__c</fullName>
    <description>Aggregate condition from CPD</description>
    <label>Value Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>