force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumeAllocate__c.field-meta.xml
<CustomField>
    <fullName>VolumeAllocate__c</fullName>
    <label>Volume Allocate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>