force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumeBudget__c.field-meta.xml
<CustomField>
    <fullName>VolumeBudget__c</fullName>
    <label>Volume Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>