force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumeFact__c.field-meta.xml
<CustomField>
    <fullName>VolumeFact__c</fullName>
    <label>Volume Fact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>