force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumeFreeze__c.field-meta.xml
<CustomField>
    <fullName>VolumeFreeze__c</fullName>
    <label>Volume Freeze</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>