force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumeInvoice__c.field-meta.xml
<CustomField>
    <fullName>VolumeInvoice__c</fullName>
    <label>Volume Invoice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>