force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumeLanded__c.field-meta.xml
<CustomField>
    <fullName>VolumeLanded__c</fullName>
    <label>Volume Landed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>