force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumePreOrder__c.field-meta.xml
<CustomField>
    <fullName>VolumePreOrder__c</fullName>
    <label>Volume PreOrder</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>