force-app/main/default/objects/CommercialPlanFollowup__c/fields/VolumeTarget__c.field-meta.xml
<CustomField>
    <fullName>VolumeTarget__c</fullName>
    <label>Volume Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>